<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="counterVal">0000</string>
    <string name="actBText">This is Activity B - It sets the counter to zero</string>
    <string name="actAText">Activity A</string>
    <string name="actB">Start Activity B</string>
    <string name="threadCounter">Thread Counter:</string>
    <string name="exit">Exit</string>

</resources>
