<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sjsu.karthik.assignment1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorPrimaryDark">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="Dialog"
        android:id="@+id/dBtn"
        android:onClick="openDialog"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/sjsuImageLogo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/fab_margin"
        android:background="@color/black"
        android:textColor="@color/lightYellow"
        />

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:id="@+id/sjsuImageLogo"
        android:src="@drawable/sjsu"

         />

    <TextView
        android:id="@+id/actAText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actAText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="70px"
        android:layout_alignTop="@+id/sjsuImageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actB"
        android:id="@+id/actBtnB"
        android:layout_alignTop="@+id/dBtn"
        android:layout_alignRight="@+id/sjsuImageLogo"
        android:layout_alignEnd="@+id/sjsuImageLogo"
        android:onClick="goToActivityB"
        android:textSize="@dimen/fab_margin"
        android:background="@color/black"
        android:textColor="@color/lightYellow"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threadCounter"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFF99"
        android:textSize="70px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/counterVal"
        android:id="@+id/threadVal"
        android:textColor="#FFFF99"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/actAText"
        android:layout_toEndOf="@+id/actAText"
        android:textSize="70px"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exitBtn"
        android:onClick="exitApplication"
        android:textSize="@dimen/fab_margin"
        android:background="@color/black"
        android:textColor="@color/lightYellow"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/threadVal"
        android:layout_toStartOf="@+id/threadVal"
        />

</RelativeLayout>
